@@ -36,6 +36,7 @@ fn try_parse_date(date: &str) -> Option<NaiveDateTime> {
             "%Y-%m-%dT%H:%MZ",   // 2025-10-20T14:17Z
             "%d-%m-%Y | %H:%M",  // 20-10-2025 | 13:52
             "%Y-%m-%d %H:%M %Z", // 2025-10-20 16:17 CEST
+            "%B %d, %Y %H:%M",   // October 21, 2025 20:53
         ];
 
         for pf in parse_format {
